<resources>
    <string name="app_name">Participate Me</string>
    <string name="title_activity_landing">Landing</string>
    
    <string name="facebook_app_id">1507646296208673</string>
    <string name="google_client_id">440907172906-saftu63k8d532c9ldn9ftajr255qmjjo.apps.googleusercontent.com</string>
    <string name="google_api_key">AIzaSyD6iYlpXvrdDTg2a5s9jn0E0O7VwPxqf_g</string>
    <string name="hint_login_id_input">Enter E-mail Id</string>
    <string name="hint_login_password_input">Enter Password</string>
    <string name="btn_login">Log In</string>
    <string name="btn_trouble_sign_in">Trouble Signing In???</string>
    <string name="btn_add_new_choice">Add New Choice</string>
    <string name="btn_add_new_image">Add New Image</string>
    <string name="sign_in_text">Sign In To Your Account</string>
    <string name="separator_or">OR</string>
    <string name="sign_in_fb">Sign In With Facebook</string>
    <string name="sign_in_google">Sign In With Google</string>
    <string name="sign_up_text">Sign Up For A Free Account</string>
    <string name="hint_sign_up_username">Choose A UserName</string>
    <string name="hint_sign_up_user_email">Enter Your E-mail Id</string>
    <string name="hint_sign_up_user_password">Choose A Password</string>
    <string name="hint_sign_up_confirm_password">Confirm Your Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="welcome_tile">Welcome!!</string>
    <string name="welcome_text">Welcome To Participate Me - the world\'s leading survey platform. Create Your Survey and use the insights to make better decisions </string>
    <string name="create_tile_1">Create</string>
    <string name="show_image">Show Image Of The Question If Available</string>
    <string name="create_tile_2">Create Your Own Surveys</string>
    <string name="create_text">Create Your Next Survey And Use Insights To Make Better Decisions</string>
    <string name="btn_create_survey">Create Survey</string>
    <string name="nav_home">Home</string>
    <string name="nav_about">About</string>
    <string name="nav_upgrade">Upgrade</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_my_surveys">My Surveys</string>
    <string name="title_activity_activity_login_sign_up">Participate Me</string>
    <string name="err_email_input">Not A Valid E-mail</string>
    <string name="err_password_input">Not A Valid Password</string>
    <string name="err_name_input">Not A Valid E-mail</string>
    <string name="err_confirm_password_input">Both Password Should Be Same</string>
    <string name="nav_selected_id">Selected Item Id</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_templates">Survey Templates</string>
    <string name="title_activity_edit_survey">Edit Survey</string>
    <string name="title_tab_most_popular">MOST POPULAR</string>
    <string name="title_tab_community">COMMUNITY</string>
    <string name="title_tab_customer_feedback">FEEDBACK</string>
    <string name="title_tab_demographics">DEMOGRAPHICS</string>
    <string name="title_tab_education">EDUCATION</string>
    <string name="title_tab_events">EVENTS</string>
    <string name="title_tab_health_care">HUMAN RESOURCES</string>
    <string name="title_tab_human_resources">HUMAN RESOURCES</string>
    <string name="title_tab_industry_specific">INDUSTRY SPECIFIC</string>
    <string name="title_tab_just_for_fun">JUST FOR FUN</string>
    <string name="title_tab_market_research">MARKET RESEARCH</string>
    <string name="title_tab_non_profit">NON PROFIT</string>
    <string name="title_tab_political">POLITICAL</string>
    <string name="dialog_create_survey_dialog_title">Create Survey</string>
    <string name="dialog_choose_survey_options_title">Choose A Option</string>
    <string name="dialog_create_survey_tile_1">Start with one Of our expert survey </string>
    <string name="dialog_create_survey_tile_2">templates or create  a new survey from</string>
    <string name="dialog_create_survey_tile_3">scratch</string>
    <string name="dialog_btn_new_survey_text">New Survey</string>
    <string name="dialog_btn_show_survey_result">Survey Results</string>
    <string name="dialog_btn_browse_templates_text">Browse Template Gallery</string>
    <string name="dialog_btn_share_survey_text">Share Survey</string>
    <string name="dialog_btn_cancel_text">Cancel</string>
    <string name="btn_update_email">Update E-Mail</string>
    <string name="btn_update_password">Update Password</string>
    <string name="hint_login_id_update_input">Enter New E-mail Id</string>
    <string name="hint_update_password_old_input">Enter Current Password</string>
    <string name="hint_update_password_new_input">Enter New Password</string>
    <string name="hint_update_password_confirm_input">Confirm New Password</string>
    <string name="err_update_password_old">This Is Not Your Current Password</string>
    <string name="err_update_password_new">New Password Can\'t Be Null And Not Same As Old one</string>
    <string name="err_update_password_confirm">Should Match With New Password</string>
    <string name="hint_user_name_update_input">Enter New User Name</string>
    <string name="btn_update_user_name">Update User Name</string>
    <string name="btn_log_out">Log Out</string>

    <string name="menu_btn_add_question">Add Question</string>
    <string name="menu_btn_submit_survey">Submit</string>

    <string-array name="user_account_credential_tile_1"><item>Username</item><item>Email</item><item>Password</item><item>Plan</item><item>Language</item></string-array>
    <string-array name="user_account_credential_tile_2"><item>New Response Email Alerts</item></string-array>
    <string name="title_activity_survey_fill">SurveyFillActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="next">NEXT</string>
    <string name="prev">PREV</string>
    <string name="title_activity_show_results">ShowResultsActivity</string>
    <string name="login_screen_hint_text">Choose Your Social Network To Login...</string>
    <string name="no_data_my_survey">Looks You Haven\'t Created Any Survey Yet...Click On Button Below And Create A New One</string>

    <string name="dialog_survey_share_text">Share A Link To Your Survey Right Now OR Share It Later From My Surveys..</string>
    <string name="share_survey_later_button">Share Later</string>
    <string name="survey_taken_by_you_hint">This Survey Is Taken By You</string>
    <string name="my_taken_survey_header">My Taken Surveys</string>
</resources>
