<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:textColor="@android:color/black"
            android:text="@string/dialog_choose_survey_options_title"
            android:id="@+id/dialog_create_survey_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <View
        android:layout_marginTop="15dp"
        android:background="@drawable/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <Button
        android:text="@string/dialog_btn_show_survey_result"
        android:id="@+id/dialogShowSurveyResults"
        android:layout_width="match_parent"
        android:background="@android:drawable/screen_background_light_transparent"
        android:layout_height="wrap_content" />

    <View
        android:background="@drawable/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <Button
        android:text="@string/dialog_btn_share_survey_text"
        android:id="@+id/dialogShareSurvey"
        android:layout_width="match_parent"
        android:background="@android:drawable/screen_background_light_transparent"
        android:layout_height="wrap_content" />

    <View
        android:background="@drawable/divider_horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>

    <Button
        android:text="@string/dialog_btn_cancel_text"
        android:id="@+id/dialogCancelButton"
        android:layout_width="match_parent"
        android:background="@android:drawable/screen_background_light_transparent"
        android:layout_height="wrap_content" />
</LinearLayout>