<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/updatePasswordOldInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <AutoCompleteTextView
            android:hint="@string/hint_update_password_old_input"
            android:id="@+id/updatePasswordOldInput"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/updatePasswordNewInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <AutoCompleteTextView
            android:hint="@string/hint_update_password_new_input"
            android:id="@+id/updatePasswordNewInput"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/updatePasswordConfirmInputLayout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <AutoCompleteTextView
            android:hint="@string/hint_update_password_confirm_input"
            android:id="@+id/updatePasswordConfirmInput"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:textColor="@android:color/white"
        android:text="@string/btn_update_password"
        android:background="@color/colorPrimary"
        android:id="@+id/updatePasswordButton"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>