<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:background="#ECEFF1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <android.support.v7.widget.CardView
                    android:layout_margin="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:padding="8dp"
                            android:textStyle="bold"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_tile"/>

                        <TextView
                            android:padding="8dp"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/welcome_text"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:paddingLeft="8dp"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/create_tile_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:paddingLeft="8dp"
                    android:textColor="@android:color/black"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:text="@string/create_tile_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:padding="8dp"
                    android:layout_marginTop="10dp"
                    android:textColor="@android:color/black"
                    android:text="@string/create_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:id="@+id/createNewSurveyButton"
                        android:background="@color/colorPrimary"
                        android:layout_width="wrap_content"
                        android:text="@string/btn_create_survey"
                        android:layout_height="wrap_content"
                        android:textColor="@android:color/white"
                        android:paddingRight="30dp"
                        android:paddingLeft="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>

                <ImageView
                    android:src="@drawable/survey"
                    android:layout_marginRight="50dp"
                    android:layout_marginLeft="50dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>
</LinearLayout>