<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/windowBackground"
    tools:context="in.ymcaapp.sbsdevs.collegeattendanceapp.TeacherLogin">

    <ScrollView
        android:id="@+id/scrollView"
        android:background="@color/md_divider_black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/loginId"
                    android:hint="@string/hint_login_id_input"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/loginPassword"
                    android:hint="@string/hint_login_password_input"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:background="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/btn_login"/>
            <Button
                android:clickable="true"
                android:background="@color/colorPrimary"
                android:foreground="?android:attr/selectableItemBackground"
                android:layout_marginTop="10dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/forgotPasswordButton"
                android:text="@string/btn_forgot_password"/>
        </LinearLayout>
    </ScrollView>


</RelativeLayout>
